--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,6 @@ dependencies {
 dependencies {
     compile "com.opencsv:opencsv:4.0"
 }
+dependencies {
+    compile "com.google.code.gson:gson:2.2.+"
+}
